force-app/main/default/objects/custom_create156__c/custom_create156__c.object-meta.xml
<CustomObject>
    <label>Custom created object156</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects156</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>