force-app/main/default/objects/custom_create156__c/fields/custom_create_156field508__c.field-meta.xml
<CustomField>
    <fullName>custom_create_156field508__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 156field508</label>
    <type>Checkbox</type>
</CustomField>